-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.13.0
-
None
-
3
-
9223372036854775807
When migrating files and directories from one MDT to another, if they happen to have xattrs set, then their values will be corrupted once migration is complete.
More precisely, the size used to store the xattr value on the migrated file/dir is taken from previous xattrs set, so it might be wrong.